FIX align img main

--- a/404-not-found-master/scss/index.scss
+++ b/404-not-found-master/scss/index.scss
@@ -38,6 +38,7 @@ body {
   &__img {
     width: 100%;
     margin: 0 0 50px;
+    justify-self: center;
   }
 
   &__title {
